_build/_log
### Starting build.
# Target: dogma.ml.depends, tags: { extension:ml, file:dogma.ml, ocaml, ocamldep, quiet }
ocamlfind ocamldep -modules dogma.ml > dogma.ml.depends
# Target: dogma.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:dogma.cmo, file:dogma.ml, implem, ocaml, quiet }
ocamlfind ocamlc -c -o dogma.cmo dogma.ml
# Target: card.ml.depends, tags: { extension:ml, file:card.ml, ocaml, ocamldep, quiet }
ocamlfind ocamldep -modules card.ml > card.ml.depends
# Target: card.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:card.cmo, file:card.ml, implem, ocaml, quiet }
ocamlfind ocamlc -c -o card.cmo card.ml
# Target: state.mli.depends, tags: { extension:mli, file:state.mli, ocaml, ocamldep, quiet }
ocamlfind ocamldep -modules state.mli > state.mli.depends
+ ocamlfind ocamldep -modules state.mli > state.mli.depends
File "state.mli", line 11, characters 0-3:
11 | val meld
     ^^^
Error: Syntax error
Command exited with code 2.
# Compilation unsuccessful.
